Bug 153693 - Error in Api LanguageTool: partial words or large sections underlined when writing in Spanish
Summary: Error in Api LanguageTool: partial words or large sections underlined when wr...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Linguistic (show other bugs)
Version:
(earliest affected)
7.5.0.3 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.2.0 target:7.6.4
Keywords:
Depends on:
Blocks: LanguageTool
  Show dependency treegraph
 
Reported: 2023-02-17 14:32 UTC by Martin Deereudei
Modified: 2024-05-03 23:40 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Misspellings where there are none (169.83 KB, image/png)
2023-02-17 14:39 UTC, Martin Deereudei
Details
Email reply from LanguageTool (45.79 KB, image/png)
2023-02-17 14:40 UTC, Martin Deereudei
Details
As it turns out on my computer. (62.20 KB, image/png)
2023-03-04 02:07 UTC, Martin Deereudei
Details
The corresponding file (10.96 KB, application/vnd.oasis.opendocument.text)
2023-03-04 02:08 UTC, Martin Deereudei
Details
partial words underlined, writing in Spanish (Argentina), with LO 7.5.1.2 on Ubuntu 20.04 (39.46 KB, image/png)
2023-03-04 23:25 UTC, Stéphane Guillou (stragu)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Deereudei 2023-02-17 14:32:52 UTC
Description:
Marks too many misspellings in correct words, and usually marks the first syllables of correctly spelled words as misspelled.
I contacted LanguageTool support and they answer me (I quote):
«The integration in LibreOffice was created by members of our open-source community or LibreOffice itself. We only provide the API key to use the premium features.
So if there is a specific problem in the integration, please contact our community forum directly to reach the developer: https://forum.languagetool.org/ 
Unfortunately, we can't offer you support for this.»
(Attached capture of the mail)

Steps to Reproduce:
1. Write some words in Writer.
2. Many parts of well-spelled words will be marked as a misspelling.
3. Clicking to show corrections or pressing F7 to call the correction will result in no errors.

The problem is that from what I understand, there is a limit of words to correct and if you add up a lot of errors, the words that are indeed an error might not be marked.

Actual Results:
Syllables of correctly spelled words are marked as misspelled

Expected Results:
Only misspelled words are underlined as a mistake.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
It only happens when new content is written to a document. It doesn't happen if a file is opened.
Comment 1 Martin Deereudei 2023-02-17 14:39:28 UTC
Created attachment 185441 [details]
Misspellings where there are none

"LanguageTool" is correctly marked as an error.
"herramienta" is a correct word, "her" is a syllable
"ortográfico" is a correct word, "ort" is part of a syllable
" pero" is a correct word, " pero" is a complete word.
Comment 2 Martin Deereudei 2023-02-17 14:40:47 UTC
Created attachment 185442 [details]
Email reply from LanguageTool
Comment 3 Mike Kaganski 2023-03-03 18:28:58 UTC
(In reply to Leandro Martín Drudi from comment #1)
> Created attachment 185441 [details]
> Misspellings where there are none

Please attach the document with the misspelled words. The document has not only the characters, but also the properties like language assigned to the characters, which might cause such problems.
Comment 4 Martin Deereudei 2023-03-04 02:07:46 UTC
Created attachment 185741 [details]
As it turns out on my computer.
Comment 5 Martin Deereudei 2023-03-04 02:08:26 UTC
Created attachment 185742 [details]
The corresponding file
Comment 6 Raphael Bircher 2023-03-04 11:21:46 UTC
Hi

Probabely you are wrong at the LibreOffice BugTracker. LanguageTool is an extension. It sounds like a bug from the extension and not from LO.

As in the E-Mail proposed, you should contact the https://forum.languagetool.org

This issue has to be adressed to the LanguageToll LibreOffice Extension Developer directly.

Regards Raphael
Comment 7 Raphael Bircher 2023-03-04 11:27:36 UTC
btw. your bug is probably allready reported at the GitHub Bugtracker of the LanguageTool. https://github.com/languagetool-org/languagetool/issues?q=is%3Aissue+is%3Aopen+LO

There are a load of stability issues regarding the LO Extension
Comment 8 Mike Kaganski 2023-03-04 13:13:47 UTC
(In reply to Raphael Bircher from comment #6)
> Probabely you are wrong at the LibreOffice BugTracker. LanguageTool is an
> extension.

Probably it is about the new core functionality, available since version 7.4 [1]. So this is the correct place for issues in this functionality. 

[1] https://wiki.documentfoundation.org/ReleaseNotes/7.4#New_remote_grammar_checker:_LanguageTool
Comment 9 Stéphane Guillou (stragu) 2023-03-04 23:24:38 UTC
I could reproduce:
- using the LanguageTool integration with the free API
- in a new document, writing a paragraph with language Spanish (Argentina)

I could sometimes see some words partially underlined, sometimes whole sections of a sentence too, and usually the issues clear out after pressing return and going to a new paragraph.

Version: 7.5.1.2 (X86_64) / LibreOffice Community
Build ID: fcbaee479e84c6cd81291587d2ee68cba099e129
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 10 Stéphane Guillou (stragu) 2023-03-04 23:25:40 UTC
Created attachment 185766 [details]
partial words underlined, writing in Spanish (Argentina), with LO 7.5.1.2 on Ubuntu 20.04
Comment 11 Mike Kaganski 2023-11-28 11:15:36 UTC
https://gerrit.libreoffice.org/c/core/+/160021
Comment 12 Commit Notification 2023-11-28 13:28:53 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/708e52a551daa27932dfae072a16e3512c72cf92

tdf#153693: improve SwXFlatParagraph::isModified check

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2023-11-29 10:21:07 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/9810b3c06c709ffef15932fe24106b503ea4ff46

tdf#153693: improve SwXFlatParagraph::isModified check

It will be available in 7.6.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.