sw/source/core/inc/unoflatpara.hxx
@@ -105,6 +105,7 @@ private:
     SwXFlatParagraph & operator = ( const SwXFlatParagraph & ) = delete;
 
     OUString maExpandText;
+    OUString maOrigText;
 };
 
 class SwXFlatParagraphIterator final :
